fixed alignment of dropdown

--- a/src/page-sections/federal-covid-spending/tracking/tracking.module.scss
+++ b/src/page-sections/federal-covid-spending/tracking/tracking.module.scss
@@ -57,7 +57,6 @@ h2 {
 }
 .view-spending-by-container {
   display: flex;
-  align-items: flex-end;
   justify-content: flex-start;
 
   .dropdown-icon {
